--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.08.2022 09:11:15</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.08.2022 09:36:11</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -139,7 +139,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {hejk, sled, losos} se zelenymi bylinkami, stredomorsky fusilli salat s paprikami, cuketami, rajcaty a zeleninou {L} 155</li><li>Filet z cerstve norske tresky zapeceny s listovym spenatem a creme fraiche, stredomorsky fusilli salat s paprikami, cuketami, rajcaty a zeleninou {L} 179</li><li>Kow mo daeng – thajske grilovane veprove ve sladke marinade s badyanem a zelenymi bylinkami, jasminova ryze, salatek 155</li><li>Italske dynove rizoto s parmezanem a uzenymi koroptvimi prsicky, salatek 179</li><li>Indicka pakora {cizrnove smazenky} s pecenou maslovou dyni, cibulkou a panc phoron, jogurtovy dip, kuskus, salatek {L} 155</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {hejk, sled, losos} se zelenymi bylinkami, salsa z cervene cibule, stredomorsky fusilli salat s paprikami, cuketami, rajcaty a zeleninou {L} 155</li><li>Filet z cerstve norske tresky zapeceny s listovym spenatem a creme fraiche, stredomorsky fusilli salat s paprikami, cuketami, rajcaty a zeleninou {L} 179</li><li>Kow mo daeng – thajske grilovane veprove ve sladke marinade s badyanem a zelenymi bylinkami, jasminova ryze, salatek 155</li><li>Italske dynove rizoto s parmezanem a uzenymi koroptvimi prsicky, salatek 179</li><li>Indicka pakora {cizrnove smazenky} s pecenou maslovou dyni, cibulkou a panc phoron, jogurtovy dip, kuskus, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
