--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.08.2022 15:11:50</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.08.2022 07:26:14</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 03. 08. 2022</h5>
+<h5>Čtvrtek, 04. 08. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Cibulačka</strong>
@@ -57,59 +57,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 3.8.2022</div>
+<div class="nadpis">Čtvrtek 4.8.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Tiramisu</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Linecký koláč s mákem a tvarohem </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Bio jogutové mléko - borůvka</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Bio jogutové mléko - vanilka </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Polévka z pečeného česneku a petržele v menu <em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Polévka z pečeného česneku a petržele samostatně <em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí supreme na tymiánu, gratinované brambory, marinovaná zelenina <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">169 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Lasagne bolognese, polníčkový salát s cherry rajčaty <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Květákové karbanátky s parmazánem, pečený brambor, tatarská omáčka <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -120,15 +70,23 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Fazolová s opečenou anglickou slaninou</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažená kuřecí kapsa plněná šunkou a sýrem, mačkané brambory s cibulí, citron</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s cibulí a strouhaným sýrem, bramboráčky</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené buřty na černém pivě s cibulí a feferonkou, opečený chléb na tálu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí nudličky na kari se zeleninou a smetanou, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 180g Masové vepřové biftečky na grilu, smetanová omáčka s barevným drceným pepřem, grusetkové nudle</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rizoto z kuřecích prsou po srbsku, strouhaný sýr, kyselá okurka</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené nové brambory s máslem a šnitlíkem, hořčice, cibule</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné hříbkové omáčce, špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní štávě, beraní roh, cibule, hořčice, křen, smažené bramborové plátky</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Tanková 11° - pivovar Staropramen 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">32,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čokoládový nepečený řez s piškoty a kokosem, šlehačka</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° alk. 5,1% - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Glorion IPA ze spilky alk. 4,9% - pivovar Ostravar</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Smažený řízek z vepřové pečeně, vařené nové brambory s máslem, citron</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová plec na divoko, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na paprice, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">180g</td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem a šnitlíkem, kyselá okurka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, květákové pyré se sýrem, grilovaná brokolice, vařené vejce</td><td class="menuPrice">158,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš dvojitý burger  100g+100g z mletého vepřové masa se šunkou, sýrem, ledovým salátem, tomaty a kyselou okurkou, smažené bramborové hranolky</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti na smetanové omáčce s fazolkami a šunkou, restované špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny, promíchaný olivovým olejem, stripsy z kuřecích prsou v cornaflakes, vařené vejce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Tanková 11° - pivovar Staropramen 0,5L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">32,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čokoládový nepečený řez s piškoty a kokosem, šlehačka</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° alk. 5,1% - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Glorion IPA ze spilky alk. 4,9% - pivovar Ostravar</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount">0,33l</td><td class="title">Hovězí vývar se zeleninou a játrovou zavářkou 1a,3,7,9</td><td class="pricem">45 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Dušená hovězí líčka na červeném víně, bramborovo pastinákové pyré, restovaná zelenina se žampiony 1a,7,9,12</td><td class="pricem">159 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí steak s grilovanou cuketou, smetanovou omáčkou z pečeného česneku a jasmínovou rýží 1a,7</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">1ks</td><td class="title">Sýrová quesadilla s trhaným salátem, cherry rajčaty a mrkví s pažitkovým zákysem 1a,3,7</td><td class="pricem">149 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+</td>
+</tr>
 </table>
 <table>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
