--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.08.2022 08:18:13</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.08.2022 08:47:54</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,42 @@
 <h5>Čtvrtek, 04. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Cibulačka</strong>
+<strong>Houbová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený Vepřový řízek s bramborovou kaší a okurkou</strong>
+<strong>Pečený losos se zeleninovým kuskusem a bylinkovou omáčkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							161,-
 						</span>
 </p>
 <p>
-<strong>Špagety se salsiciou s kořenovou zeleninou a parmazánem</strong>
+<strong>Kuřecí roláda plněná špenátem se šťouchaným bramborem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							145,-
+						</span>
+</p>
+<p>
+<strong>Croque monsieur s hranolkami a hořčičnou majonézou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí tortilla s ledovým salátkem a rajčatovým dipem</strong>
+<strong>TEPLÝ BUFET: Vepřová Pečená žebra, Tilapie se sušenými rajčaty , pečené brambory, zelenina, rýže</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							141,-
+							44,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie s rajcatem a slaninou, hovězí na česneku, zelenina, rýže, batáty</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							49,-
-						</span>
-</p>
-<p>
-<strong>SALÁTY: Čočkový s rajčaty a kari, Míchaný s cesnekovym dipem, caesar</strong>
+<strong>SALÁTY: čočkový s paprikou a chilli dresinkem, Míchaný z naší zahrádky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
